fix(page title): added button visibility condition, refactor styles

--- a/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
+++ b/src/common/components/PageTitleBlock/PageTitleBlock.module.scss
@@ -1,8 +1,6 @@
 .pageTitleBlockContainer {
   display: flex;
   flex-direction: column;
-
-  margin: 0px 0px 22px 0px;
 }
 
 .pageTitleBlock {
